--- a/css/modelos.css
+++ b/css/modelos.css
@@ -68,7 +68,12 @@ body {
   width: 100%;
   height: 90px;
   color: #fff;
-  top: 0;
+}
+
+.collapse{
+  background: #000;
+  transition: all 0.1s ease;
+  text-align: center;
 }
 
 .nav-link {
