--- a/css/ofertas.css
+++ b/css/ofertas.css
@@ -1,11 +1,8 @@
 
 body{
-  width: 100%;
-  height: 100%;
-  font-family: agency fb !important;
-  letter-spacing: 0.03em;
-  line-height: 1.6;
-  background-color:gray !important;
+  margin: 0;
+  padding: 0;
+  background-color: gray;
 }
 
 
@@ -79,7 +76,7 @@ body{
 
 .container .card{
   width: 330px;
-  height: 430px;
+  height: 450px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px #000;
   overflow: hidden;
@@ -123,20 +120,20 @@ li{
 /* Footer */
 footer {
   background: #333;
-  color: rgb(235, 232, 70);
   padding: 10px 0;
   text-align: center;
   font-size: 14px;
   bottom: 0;
   width: 100%;
   justify-content: center;
-  position: relative;
-  position: end;
+  z-index: 45;
+  bottom: 0;
+  align-self: flex-end;
   border-top: rgb(235, 230, 70) solid 1.5px;
 }
 
 footer a {
-  color: rgb(235, 232, 70);
+  color: #fff;
   text-decoration: none;
   display: inline-block;
   margin: 0 5px;
